# radar-regulatorio-mx

./: .gitignore  AGENTS.md  README.md  app.js  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/radar-diario/: SKILL.md
.github/workflows/: actions-smoke.yml  ci.yml  collect.yml  pages.yml
app/: __init__.py  calendars.py  cli.py  config.py  edition.py  editorial.py  markdown.py  models.py  pipeline.py  relevance.py  storage.py  summarizer.py  taxonomy.py  text.py  validation.py
app/certs/: intermediates.pem
app/sources/: __init__.py  anam.py  base.py  diputados.py  dof.py  gobmx.py  icsid.py  impi.py  international.py  platiica.py  senado.py  snice.py  tfja.py  tmec.py  worldbank.py
data/: publications.json
docs/: EDITORIAL_CLOUD.md  GIT_WORKFLOW.md  GUARDIAS.md  MAC_SCHEDULE.md  SOURCE_AUDIT.md  app.js  archive.js  archivo.html  calendario.html  calendario.js  detail.js  ficha.html  guardias.html  guardias.js  index.html  markdown.js  styles.css
docs/data/: calendars.json  edition.json  icsid_snapshot.json  publications.json  tmec_snapshot.json
scripts/: codex_daily.sh  collect_daily.sh  install_macos_codex_launchd.sh  install_macos_launchd.sh  mac_bootstrap.sh
site/: app.js  detail.js  ficha.html  index.html  styles.css
site/data/: publications.json
tests/: test_calendars.py  test_edition.py  test_editorial.py  test_markdown.py  test_relevance.py  test_sources.py  test_storage.py  test_summarizer.py  test_taxonomy.py  test_text.py  test_validation.py
